--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.androidbootcamp.sunshine.MyActivity$PlaceholderFragment">
+    tools:context="com.androidbootcamp.sunshine.MyActivity.ForecastFragment">
 
   <ListView
       android:id="@+id/listview_forecast"
