set passed data in the detail activity

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -9,6 +9,7 @@
     tools:context="com.androidbootcamp.sunshine.DetailActivity$PlaceholderFragment">
 
     <TextView
+        android:id="@+id/detail_text"
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
