--- a/app/src/main/res/menu/forecast_fragment_menu.xml
+++ b/app/src/main/res/menu/forecast_fragment_menu.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_refresh"
-        android:title="@string/refresh"
+    <item
+        android:id="@+id/action_refresh"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:showAsAction="never"
+        android:title="@string/refresh" />
+
+    <item
+        android:id="@+id/action_change_location"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/change_location" />
 </menu>
