--- a/app/src/main/res/menu/detail_fragment.xml
+++ b/app/src/main/res/menu/detail_fragment.xml
@@ -3,8 +3,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/menu_item_share"
+    <item
+        android:id="@+id/menu_item_share"
         android:title="@string/action_share"
         app:showAsAction="always"
-        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
+        />
 </menu>
